fix/convert properly and classify according to color

--- a/popup.html
+++ b/popup.html
@@ -39,6 +39,12 @@
       background-color: #cccccc;
       cursor: not-allowed;
     }
+    .kmz-btn {
+      background-color: #2196F3;
+    }
+    .kmz-btn:hover {
+      background-color: #1976D2;
+    }
     .status {
       font-size: 12px;
       color: #666;
@@ -53,7 +59,14 @@
       overflow-y: auto;
       white-space: pre-wrap;
     }
+    .ready {
+      color: #4CAF50;
+      font-weight: bold;
+    }
   </style>
+    <script src="./jszip.min.js"></script>
+    <script src="./h3-js.umd.js"></script>
+    <script src="./jamming-converter.js"></script>
 </head>
 <body>
   <div class="header">
@@ -69,7 +82,8 @@
   
   <div class="data-section">
     <h3>Jamming Data</h3>
-    <button id="downloadJamming" class="download-btn">Download Jamming Data</button>
+    <button id="downloadJamming" class="download-btn">Download JSON</button>
+    <button id="downloadJammingKMZ" class="download-btn kmz-btn">Download KMZ</button>
     <div id="jammingStatus" class="status">No data captured yet</div>
     <div id="jammingPreview" class="data-preview"></div>
   </div>
@@ -80,6 +94,9 @@
     <button id="clearData" class="download-btn" style="background-color: #f44336;">Clear All Data</button>
   </div>
 
+  <div id="converterStatus" class="status ready">✓ KMZ Converter Ready</div>
+
   <script src="popup.js"></script>
+
 </body>
 </html>
