--- a/popup.html
+++ b/popup.html
@@ -70,14 +70,7 @@
 </head>
 <body>
   <div class="header">
-    <h2>Aviation Data Scraper</h2>
-  </div>
-  
-  <div class="data-section">
-    <h3>Spoofing Data</h3>
-    <button id="downloadSpoofing" class="download-btn">Download Spoofing Data</button>
-    <div id="spoofingStatus" class="status">No data captured yet</div>
-    <div id="spoofingPreview" class="data-preview"></div>
+    <h2>GPS Jam Layer</h2>
   </div>
   
   <div class="data-section">
@@ -86,6 +79,13 @@
     <button id="downloadJammingKMZ" class="download-btn kmz-btn">Download KMZ</button>
     <div id="jammingStatus" class="status">No data captured yet</div>
     <div id="jammingPreview" class="data-preview"></div>
+  </div>
+
+    <div class="data-section">
+    <h3>Spoofing Data</h3>
+    <button id="downloadSpoofing" class="download-btn">Download Spoofing Data</button>
+    <div id="spoofingStatus" class="status">No data captured yet</div>
+    <div id="spoofingPreview" class="data-preview"></div>
   </div>
   
   <div class="data-section">
