--- a/installation/index.html
+++ b/installation/index.html
@@ -63,10 +63,14 @@
         <strong>Step 5:</strong> The extension should now appear in your extensions list and be ready to use!
     </div>
     
+    <div class="step">
+        <strong>Step 6:</strong> Open Chrome browser to https://spoofing.skai-data-services.com/ and click on the extension icon in the browser bar.
+    </div>
+
     <div class="warning">
         <strong>⚠️ Important:</strong> Don't delete the extracted folder after installation - Chrome needs it to run the extension.
     </div>
-    
+
     <h3>Troubleshooting</h3>
     <ul>
         <li>If you don't see "Load unpacked", make sure Developer mode is enabled</li>
