feat/select resolution

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -198,6 +198,14 @@
           <div class="color-option" data-color="red" style="background: #ff0000;" title="High Jamming"></div>
         </div>
         <div style="font-size: 11px;">Click map to add/edit hexagons</div>
+        <select id="resolutionSelect">
+          <option value="3">Resolution 3 (Large - approx 1107 km²)</option>
+          <option value="4">Resolution 4 (Medium - approx 418 km²)</option>
+          <option value="5">Resolution 5 (Small - approx 158 km²)</option>
+          <option value="6">Resolution 6 (Smaller - approx 59 km²)</option>
+          <option value="7">Resolution 7 (Very Small - approx 22 km²)</option>
+          <option value="8">Resolution 8 (Tiny - approx 0.74 km²)</option>
+        </select>
       </div>
     </div>
   </div>
